# taskflow-backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py  logging.py  security.py
app/db/: models.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 0cd1d547d8f0_add_task_assignment_and_updated_at.py  18b1f848372f_add_projects.py  21cbd00986cb_add_organizations_and_org_members.py  2f310cefb404_add_projects.py  716f72c5d91f_create_users_table.py  7a893edc6a5b_add_notifications.py  9e5f3cd4a1ab_add_notification_outbox.py  d4af186074e4_add_tasks.py
app/infra/: celery_app.py  redis.py
app/modules/auth/: deps.py  router.py  schemas.py  service.py  tokens.py
app/modules/notifications/: __init__.py  celery_tasks.py  models.py  repository.py  router.py  schemas.py  service.py
app/modules/organizations/: __init__.py  enums.py  invites.py  models.py  repository.py  router.py  schemas.py  service.py
app/modules/projects/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
app/modules/tasks/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
app/modules/users/: __init__.py  models.py  repository.py
tests/: test_auth.py
